...
  OutlinedTextField(
      value = title,
      onValueChange = onTitleChange,
      label = { Text("Title", style = Typography.bodyLarge) },
      placeholder = { Text("Name your Request", style = Typography.bodyLarge) },
      shape = RoundedCornerShape(12.dp),
      modifier = Modifier.fillMaxWidth().testTag("inputRequestTitle"),
      colors =
          OutlinedTextFieldDefaults.colors(
              unfocusedContainerColor = Color.Transparent,
              focusedBorderColor = colorScheme.secondary,
              unfocusedBorderColor = colorScheme.surfaceVariant))
}
...
  OutlinedTextField(
      value = description,
      onValueChange = onDescriptionChange,
      label = { Text("Description", style = Typography.bodyLarge) },
      placeholder = { Text("Describe your request", style = Typography.bodyLarge) },
      shape = RoundedCornerShape(12.dp),
      modifier = Modifier.fillMaxWidth().height(150.dp).testTag("inputRequestDescription"),
      colors =
          OutlinedTextFieldDefaults.colors(
              unfocusedContainerColor = Color.Transparent,
              focusedBorderColor = colorScheme.secondary,
              unfocusedBorderColor = colorScheme.surfaceVariant))
}
...
        },
        readOnly = readOnly,
        label = { Text("Service Type", style = Typography.bodyLarge) },
        placeholder = { Text("Select a Service Type", style = Typography.bodyLarge) },
        shape = RoundedCornerShape(12.dp),
        modifier =
            Modifier.fillMaxWidth().testTag("inputServiceType").onFocusChanged { focusState ->
              if (!focusState.isFocused) onShowDropdownTypeChange(false)
            },
        singleLine = true,
        colors =
            OutlinedTextFieldDefaults.colors(
                unfocusedContainerColor = Color.Transparent,
...
        modifier =
            Modifier.fillMaxWidth()
                .heightIn(max = 200.dp)
                .background(colorScheme.background)
                .border(1.dp, colorScheme.onSurfaceVariant, shape = RoundedCornerShape(8.dp))
                .padding(start = 8.dp, end = 8.dp)
                .testTag("serviceTypeMenu")) {
          filteredServiceTypes.forEach { serviceType ->
            DropdownMenuItem(
                modifier = Modifier.testTag("serviceTypeResult"),
                text = {
                  Text(
                      serviceType.name
                          .replace("_", " ")
                          .lowercase(Locale.getDefault())
                          .replaceFirstChar { it.uppercase(Locale.getDefault()) },
...
    onLocationSelected: (Location) -> Unit,
    requestLocation: Location?,
    backgroundColor: Color = colorScheme.background,
    debounceDelay: Long = 1001L, // debounce delay longer than 1 second,
    isValueOk: Boolean = false,
    errorMessage: String = "Invalid location", // Default error message
    testTag: String = "inputRequestAddress"
) {
  val coroutineScope = rememberCoroutineScope()
  var debounceJob by remember { mutableStateOf<Job?>(null) }

  // Local state to update the text field instantly without triggering the API call
  var localQuery by remember { mutableStateOf(locationQuery) }
...
            Text(
                text = "Previously used locations",
                modifier = Modifier.padding(8.dp),
                style = Typography.bodyLarge.copy(color = colorScheme.primary))
            userLocations.forEach { location ->
              DropdownMenuItem(
                  modifier = Modifier.padding(start = 8.dp, end = 8.dp).testTag("locationResult"),
                  text = {
                    Text(
                        text =
                            location.name.take(50) + if (location.name.length > 50) "..." else "",
                        maxLines = 1,
                        style = Typography.bodyLarge)
...
@Composable
fun DatePickerModal(onDateSelected: (Long?) -> Unit, onDismiss: () -> Unit) {
  val datePickerState = rememberDatePickerState()

  DatePickerDialog(
      onDismissRequest = onDismiss,
      modifier = Modifier.testTag("datePickerDialog"),
      confirmButton = {
        TextButton(
            onClick = {
              onDateSelected(datePickerState.selectedDateMillis)
              onDismiss()
            }) {
              Text("OK", style = Typography.bodyLarge)
            }
      },
      dismissButton = {
        TextButton(onClick = onDismiss) { Text("Cancel", style = Typography.bodyLarge) }
      }) {
        DatePicker(state = datePickerState)
      }
}

/**
...
      onValueChange = {},
      label = { Text("Deadline", style = Typography.bodyLarge) },
      placeholder = { Text("DD/MM/YYYY", style = Typography.bodyLarge) },
      trailingIcon = { Icon(Icons.Default.DateRange, contentDescription = "Select date") },
      shape = RoundedCornerShape(12.dp),
      modifier =
          modifier.fillMaxWidth().testTag("inputRequestDate").pointerInput(selectedDate) {
            awaitEachGesture {
              awaitFirstDown(pass = PointerEventPass.Initial)
              val upEvent = waitForUpOrCancellation(pass = PointerEventPass.Initial)
              if (upEvent != null) {
                showModal = true
              }
...
fun DeleteButton(
    request: ServiceRequest,
    requestViewModel: ServiceRequestViewModel,
    navigationActions: NavigationActions
) {
  Button(
      modifier = Modifier.testTag("deleteRequestButton").fillMaxWidth().height(40.dp),
      colors = ButtonDefaults.buttonColors(containerColor = Color.Transparent),
      onClick = {
        try {
          requestViewModel.deleteServiceRequestById(request.uid)
          navigationActions.navigateAndSetBackStack(Route.REQUESTS_OVERVIEW, listOf())
        } catch (e: Exception) {
...
