...
    imageUrl: String?,
    onImageSelected: (Uri?) -> Unit,
    onSubmit: () -> Unit,
    submitButtonText: String
) {
  Scaffold(
      modifier = Modifier.testTag("requestScreen"),
      topBar = {
        TopAppBar(
            title = { Text(screenTitle, Modifier.testTag("screenTitle")) },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
...
              Button(
                  onClick = onSubmit,
                  modifier =
                      Modifier.fillMaxWidth()
                          .padding(start = 80.dp, end = 80.dp)
                          .height(40.dp)
                          .testTag("requestSubmit"),
                  shape = RoundedCornerShape(25.dp),
                  enabled = title.isNotBlank() && description.isNotBlank() && dueDate.isNotBlank(),
                  colors =
                      ButtonDefaults.buttonColors(
                          containerColor = Color(0xFFCA97FC),
                          disabledContainerColor = Color(0xFFDECBFC),
...
