...
      activity?.requestedOrientation = ActivityInfo.SCREEN_ORIENTATION_UNSPECIFIED
      requestViewModel.clearFilters()
    }
  }

  Scaffold(
      modifier = Modifier.testTag("requestsOverviewScreen"),
      bottomBar = {
        val currentRoute = navigationActions.currentRoute()
        BottomNavigationMenu(
            onTabSelect = { navigationActions.navigateTo(it) },
            tabList = LIST_TOP_LEVEL_DESTINATION_SEEKER,
            selectedItem = currentRoute)
...
      }
}

@Composable
fun NoRequestsText() {
  Column(
      modifier = Modifier.fillMaxSize().testTag("noServiceRequestsScreen"),
      verticalArrangement = Arrangement.Center,
      horizontalAlignment = Alignment.CenterHorizontally,
  ) {
    Text(
        text = "You have no active service request.\nCreate one.",
        fontSize = 20.sp,
...
